--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/latte?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=ahlon
 
 qf.jdbc.driverClassName=com.mysql.jdbc.Driver
 qf.jdbc.url=jdbc:mysql://10.18.10.3:3306/qf_c2c_pay?autoCommit=true&useUnicode=true&autoReconnect=true
