--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,27 @@
 	</properties>
 
 	<dependencies>
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
-			</dependency> -->
+	    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!--  
+		<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+		-->
+        
 	    <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -35,14 +54,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -145,39 +157,34 @@
             </plugin>
         </plugins>
     </build>
-    
-	<repositories>
-		<repository>
-			<id>nexus</id>
-			<name>Nexus</name>
-			<url>http://nexus.ixiaopu.com:8081/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>  
-            <id>spring-milestone</id>  
-            <url>http://repo.spring.io/libs-release</url>  
-        </repository>  
-	</repositories>
 	
-	<pluginRepositories>
-		<pluginRepository>
-			<id>nexus</id>
-			<name>Nexus</name>
-			<url>http://nexus.ixiaopu.com:8081/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-	
+	<repositories>    
+	    <repository>    
+	      <id>maven-net-cn</id>
+	      <name> Maven China Mirror</name>    
+	      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>    
+	      <releases>    
+	        <enabled>true</enabled>    
+	      </releases>    
+	      <snapshots>    
+	        <enabled>false</enabled>
+	      </snapshots>    
+	    </repository>
+	</repositories>    
+	  <pluginRepositories>    
+	    <pluginRepository>    
+	      <id> maven-net-cn</id>    
+	      <name> Maven China Mirror</name>    
+	      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>    
+	      <releases>    
+	        <enabled> true</enabled>    
+	      </releases>    
+	      <snapshots>    
+	        <enabled> false</enabled>    
+	      </snapshots>         
+	    </pluginRepository>    
+	  </pluginRepositories>  
+  
 	<profiles>
         <profile>
             <id>dev</id>
