--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,13 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		
+		<!-- qiniu object storage -->
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>[7.2.0, 7.2.99]</version>
+	    </dependency>
 
 	</dependencies>
 
