upgrade springboot version and springfox version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ jdbc.minPoolSize=2
 jdbc.maxPoolSize=5
 jdbc.acquireIncrement=1
 
+server.port=8080
+
 # spring.view.prefix=/WEB-INF/ftl/
 # spring.view.suffix=.ftl
 # server.contextPath=/demo-starter
