--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency> -->
 		<!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-test</artifactId> 
 			<scope>test</scope> </dependency> -->
 
@@ -113,13 +113,6 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-		</dependency>
-
-		<!--静态页面依赖的webjar -->
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>swagger-ui</artifactId>
-			<version>2.1.8-M1</version>
 		</dependency>
 
 		<dependency>
