--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,20 @@ jdbc:
   url: jdbc:mysql://127.0.0.1:3306/latte?useUnicode=true&characterEncoding=UTF-8
   username: root
   password: ahlon
+  
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/latte
+    username: root
+    password: ahlon
+    driverClassName: com.mysql.jdbc.Driver
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        hbm2ddl: 
+          auto: update
+        ddl-auto: update
 
 # spring.view.prefix=/WEB-INF/ftl/
 # spring.view.suffix=.ftl
